ghc-6.2/hslibs/win32/Win32Registry_stub_ffi.h

extern void* prim_regOpenKey(HKEY arg1,char * arg2);
extern void* access_prim_regOpenKey_gc_res3(HsPtr);
extern HKEY access_prim_regOpenKey_gc_res1(HsPtr);
extern int access_prim_regOpenKey_gc_failed(HsPtr);
extern void* access_prim_regOpenKey_gc_failstring(HsPtr);
extern void* prim_regOpenKeyEx(HKEY arg1,char * arg2,int arg3);
extern void* access_prim_regOpenKeyEx_gc_res3(HsPtr);
extern HKEY access_prim_regOpenKeyEx_gc_res1(HsPtr);
extern int access_prim_regOpenKeyEx_gc_failed(HsPtr);
extern void* access_prim_regOpenKeyEx_gc_failstring(HsPtr);
extern void* prim_regQueryInfoKey(HKEY arg1);
extern char * access_prim_regQueryInfoKey_str(HsPtr);
extern int access_prim_regQueryInfoKey_cbClass(HsPtr);
extern DWORD access_prim_regQueryInfoKey_cSubKeys(HsPtr);
extern DWORD access_prim_regQueryInfoKey_cbMaxSubKeyLen(HsPtr);
extern DWORD access_prim_regQueryInfoKey_cbMaxClassLen(HsPtr);
extern DWORD access_prim_regQueryInfoKey_cValues(HsPtr);
extern DWORD access_prim_regQueryInfoKey_cbMaxValueNameLen(HsPtr);
extern DWORD access_prim_regQueryInfoKey_cbMaxValueLen(HsPtr);
extern int access_prim_regQueryInfoKey_cbSecurityDescriptor(HsPtr);
extern DWORD access_prim_regQueryInfoKey_gc_res2(HsPtr);
extern DWORD access_prim_regQueryInfoKey_gc_res3(HsPtr);
extern int access_prim_regQueryInfoKey_gc_failed(HsPtr);
extern void* access_prim_regQueryInfoKey_gc_failstring(HsPtr);
extern void* prim_regQueryValueKey(HKEY arg1,char * arg2);
extern char * access_prim_regQueryValueKey_gc_res2(HsPtr);
extern int access_prim_regQueryValueKey_gc_failed(HsPtr);
extern void* access_prim_regQueryValueKey_gc_failstring(HsPtr);
extern void* prim_regQueryValue(HKEY arg1,char * arg2);
extern char * access_prim_regQueryValue_gc_res2(HsPtr);
extern int access_prim_regQueryValue_gc_failed(HsPtr);
extern void* access_prim_regQueryValue_gc_failstring(HsPtr);
extern void* prim_regQueryValueEx(HKEY arg1,char * arg2,void * arg3,int arg4);
extern int access_prim_regQueryValueEx_gc_res1(HsPtr);
extern int access_prim_regQueryValueEx_gc_failed(HsPtr);
extern void* access_prim_regQueryValueEx_gc_failstring(HsPtr);
extern void* prim_regReplaceKey(HKEY arg1,char * arg2,char * arg3,char * arg4);
extern int access_prim_regReplaceKey_gc_failed(HsPtr);
extern void* access_prim_regReplaceKey_gc_failstring(HsPtr);
extern int prim_rEG_WHOLE_HIVE_VOLATILE();
extern int prim_rEG_REFRESH_HIVE();
extern int prim_rEG_NO_LAZY_FLUSH();