ghc-6.2/hslibs/win32/Win32Registry.hs


-- for Win 3.x compatibility, use RegOpenKeyEx instead.
regOpenKey :: HKEY -> String -> IO HKEY
regOpenKey arg1 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regOpenKey arg1 arg2
  >>= \ gc_result ->
  access_prim_regOpenKey_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regOpenKey_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_regOpenKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regOpenKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
       (return (gc_res2))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regOpenKey" prim_regOpenKey :: Ptr () -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKey_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKey_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKey_gc_failstring :: Addr -> IO (Addr)

regOpenKeyEx :: HKEY -> String -> REGSAM -> IO HKEY
regOpenKeyEx arg1 gc_arg1 arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regOpenKeyEx arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_regOpenKeyEx_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regOpenKeyEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_regOpenKeyEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regOpenKeyEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
       (return (gc_res2))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regOpenKeyEx" prim_regOpenKeyEx :: Ptr () -> Addr -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKeyEx_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKeyEx_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKeyEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regOpenKeyEx_gc_failstring :: Addr -> IO (Addr)

data RegInfoKey =
 RegInfoKey {
    class_string       :: String,
    class_id           :: Int,
    subkeys            :: Word32,
    max_subkey_len     :: Word32,
    max_class_len      :: Word32,
    values             :: Word32,
    max_value_name_len :: Word32,
    max_value_len      :: Word32,
    sec_len            :: Int,
    lastWrite_lo       :: Word32,
    lastWrite_hi       :: Word32
 }

regQueryInfoKey :: HKEY -> IO RegInfoKey
regQueryInfoKey arg1 =
  withForeignPtr arg1 $ \ arg1 ->
  prim_regQueryInfoKey arg1
  >>= \ gc_result ->
  access_prim_regQueryInfoKey_str (gc_result :: Addr) >>= \ str ->
  access_prim_regQueryInfoKey_cbClass (gc_result :: Addr) >>= \ cbClass ->
  access_prim_regQueryInfoKey_cSubKeys (gc_result :: Addr) >>= \ cSubKeys ->
  access_prim_regQueryInfoKey_cbMaxSubKeyLen (gc_result :: Addr) >>= \ cbMaxSubKeyLen ->
  access_prim_regQueryInfoKey_cbMaxClassLen (gc_result :: Addr) >>= \ cbMaxClassLen ->
  access_prim_regQueryInfoKey_cValues (gc_result :: Addr) >>= \ cValues ->
  access_prim_regQueryInfoKey_cbMaxValueNameLen (gc_result :: Addr) >>= \ cbMaxValueNameLen ->
  access_prim_regQueryInfoKey_cbMaxValueLen (gc_result :: Addr) >>= \ cbMaxValueLen ->
  access_prim_regQueryInfoKey_cbSecurityDescriptor (gc_result :: Addr) >>= \ cbSecurityDescriptor ->
  access_prim_regQueryInfoKey_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_regQueryInfoKey_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regQueryInfoKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regQueryInfoKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ str) >>= \ gc_res1 ->
       (return ((RegInfoKey gc_res1 cbClass cSubKeys cbMaxSubKeyLen cbMaxClassLen cValues cbMaxValueNameLen cbMaxValueLen cbSecurityDescriptor gc_res2 gc_res3)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regQueryInfoKey" prim_regQueryInfoKey :: Ptr () -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_str :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cbClass :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cSubKeys :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cbMaxSubKeyLen :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cbMaxClassLen :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cValues :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cbMaxValueNameLen :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cbMaxValueLen :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_cbSecurityDescriptor :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_gc_res2 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_gc_res3 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryInfoKey_gc_failstring :: Addr -> IO (Addr)

-- %fun RegQueryMultipleValues :: HKEY -> IO ([VALENT],String)

-- RegQueryValue() isn't really that, it just allows you to
-- get at the default values of keys, so we provide our own
-- (and better!) version of it. If you want RegQueryValue()s
-- behaviour, use regQueryValueKey.

regQueryValueKey :: HKEY -> MbString -> IO String
regQueryValueKey arg1 gc_arg1 =
  (case gc_arg1 of {
      Nothing -> (return (nullAddr));
      (Just gc_arg1) -> (marshall_string_ gc_arg1) >>= \ (arg2) ->
			(return ((arg2)))
   }) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regQueryValueKey arg1 arg2
  >>= \ gc_result ->
  access_prim_regQueryValueKey_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_regQueryValueKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regQueryValueKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ gc_res2) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regQueryValueKey" prim_regQueryValueKey :: Ptr () -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValueKey_gc_res2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValueKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValueKey_gc_failstring :: Addr -> IO (Addr)

regQueryValue :: HKEY -> MbString -> IO String
regQueryValue arg1 gc_arg1 =
  (case gc_arg1 of {
      Nothing -> (return (nullAddr));
      (Just gc_arg1) -> (marshall_string_ gc_arg1) >>= \ (arg2) ->
			(return ((arg2)))
   }) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regQueryValue arg1 arg2
  >>= \ gc_result ->
  access_prim_regQueryValue_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_regQueryValue_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regQueryValue_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ gc_res2) >>= \ gc_res1 ->
       (return (gc_res1))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regQueryValue" prim_regQueryValue :: Ptr () -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValue_gc_res2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValue_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValue_gc_failstring :: Addr -> IO (Addr)

-- %end free(szValue);

regQueryValueEx :: HKEY -> String -> Addr -> Int -> IO RegValueType
regQueryValueEx arg1 gc_arg1 arg3 arg4 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regQueryValueEx arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_regQueryValueEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_regQueryValueEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regQueryValueEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (gc_res1))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regQueryValueEx" prim_regQueryValueEx :: Ptr () -> Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValueEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValueEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regQueryValueEx_gc_failstring :: Addr -> IO (Addr)

regReplaceKey :: HKEY -> String -> String -> String -> IO ()
regReplaceKey arg1 gc_arg1 gc_arg2 gc_arg3 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  (marshall_string_ gc_arg2) >>= \ (arg3) ->
  (marshall_string_ gc_arg3) >>= \ (arg4) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regReplaceKey arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_regReplaceKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regReplaceKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regReplaceKey" prim_regReplaceKey :: Ptr () -> Addr -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regReplaceKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regReplaceKey_gc_failstring :: Addr -> IO (Addr)

type RegRestoreFlags = Int32

foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_WHOLE_HIVE_VOLATILE" rEG_WHOLE_HIVE_VOLATILE :: RegRestoreFlags
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_REFRESH_HIVE" rEG_REFRESH_HIVE :: RegRestoreFlags
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_NO_LAZY_FLUSH" rEG_NO_LAZY_FLUSH :: RegRestoreFlags
